--- a/client/src/Pages/FrmEmpleados.module.css
+++ b/client/src/Pages/FrmEmpleados.module.css
@@ -74,9 +74,23 @@ label {
   grid-column-start: 3;
   grid-column-end: 5;
 }
-input[type="submit"]:hover {
-  background-color: rgba(15, 172, 15, 0.986);
 
+.btnCancelar{
+  padding: 10px;
+  cursor: pointer;
+  border: 1px solid rgb(196, 9, 34);
+  background-color: rgb(224, 18, 29);
+  color: white;
+  border-radius: 4px;
+  box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.4);
+}
+
+.btnCancelar{
+  grid-column-start: 1;
+  grid-column-end: 3;
+}
+.btnGuardar:hover {
+  background-color: rgba(15, 172, 15, 0.986);
   transition: 0.1s ease-in;
 }
 
