--- a/client/src/Pages/UserPage.module.css
+++ b/client/src/Pages/UserPage.module.css
@@ -8,6 +8,7 @@ body{
     align-items: center;
     width: 100%;
     margin: -100px auto;
+    overflow: hidden;
 }
 
 .user_main {
@@ -59,4 +60,38 @@ body{
     text-shadow: 1px 1px 6px black;
     letter-spacing: 0.8px;
     overflow: hidden;
+}
+
+.user_footer button{
+    padding: 8px;
+    border: 1px solid;
+    color: white;
+    background-color: rgb(136, 9, 30);
+    border-radius: 10px;
+}
+
+.user_main input{
+    padding: 15px;
+    border: 1px solid ;
+    border-radius: 4px;
+    width: 290px;
+    box-sizing: border-box;
+
+}
+
+@media  screen and (max-width: 1366px) {
+    .user_main button {
+        padding: 10px;
+        width: 200px;
+        height: 150px;
+        font-size: 20px;
+        cursor: pointer;
+        
+        border: 1px solid black;
+        box-shadow: 1px 2px 1px rgba(255, 255, 255, 0.3);
+    
+        border-radius: 15px;
+        color: white;
+        text-shadow: 1px 1px 6px black
+    }
 }
